--- a/pom.xml
+++ b/pom.xml
@@ -24,7 +24,8 @@
         <dependency>
             <groupId>com.stripe</groupId>
             <artifactId>stripe-java</artifactId>
-            <version>24.1.0</version> </dependency>
+            <version>24.1.0</version>
+        </dependency>
         <dependency>
             <groupId>mysql</groupId>
             <artifactId>mysql-connector-java</artifactId>
